feature: Add switchable local/cloud AI service (Ollama/Google Gemini)

--- a/.env.example
+++ b/.env.example
@@ -16,4 +16,14 @@ TEST_PASSWORD=Password123
 RETRY_COUNT=2
 
 # Reporting
-ALLURE_RESULTS_DIR=allure-results 
+ALLURE_RESULTS_DIR=allure-results
+
+# AI Service Configuration
+AI_SERVICE_MODE=local # Options: 'local', 'google'
+GOOGLE_API_KEY=your_google_ai_studio_api_key_here # Get from https://aistudio.google.com/app/apikey
+GOOGLE_GEMINI_MODEL=gemini-pro # e.g., 'gemini-pro', 'gemini-1.5-flash' (for multimodal)
+
+# Local LLM (Ollama) Configuration (if AI_SERVICE_MODE=local)
+OLLAMA_BASE_URL=http://localhost:11434/api
+OLLAMA_DEFAULT_MODEL=llama3:latest
+OLLAMA_VISUAL_MODEL=llava:latest # Model used for visual comparisons in VisualTestHelper
